# hev-socks5-tunnel

./: .gitignore  .gitmodules  Makefile  PROMPT_loop0.md  README.md  skills-lock.json
.github/workflows/: rust-ci.yml
.ralph/: current-events  current-loop-id  events-20260309-115105.jsonl  events-20260309-115138.jsonl  events-20260309-115213.jsonl  events-20260309-115242.jsonl  events-20260309-115340.jsonl  events-20260309-115424.jsonl  events-20260309-115438.jsonl  events-20260309-121247.jsonl  events-20260309-124428.jsonl  events-20260309-130916.jsonl  events-20260309-140657.jsonl  history.jsonl
.ralph/agent/: memories.md  scratchpad.md  summary.md  tasks.jsonl
.ralph/diagnostics/2026-03-09T15-51-38/: orchestration.jsonl  trace.jsonl
.ralph/diagnostics/2026-03-09T15-52-13/: orchestration.jsonl  trace.jsonl
.ralph/diagnostics/2026-03-09T15-52-42/: orchestration.jsonl  trace.jsonl
.ralph/diagnostics/2026-03-09T15-53-40/: orchestration.jsonl  trace.jsonl
rust/: Cargo.toml  PROMPT_loop1.md  PROMPT_loop2.md  PROMPT_loop3.md  PROMPT_loop4.md  PROMPT_loop5.md  PROMPT_loop6.md  PROMPT_loop7.md  PROMPT_loop8.md  PROMPT_loop9.md
rust/crates/hs5t-bin/: Cargo.toml  build.rs
rust/crates/hs5t-bin/src/: main.rs
rust/crates/hs5t-bin/tests/: cli_tests.rs
rust/crates/hs5t-config/: Cargo.toml
rust/crates/hs5t-config/src/: lib.rs
rust/crates/hs5t-core/: Cargo.toml  build.rs  cbindgen.toml
rust/crates/hs5t-core/include/: hev-main-rust.h
rust/crates/hs5t-core/src/: c_api.rs  classify.rs  device.rs  io_loop.rs  lib.rs  sessions.rs  stats.rs  tunnel_api.rs
rust/crates/hs5t-dns-cache/: Cargo.toml
rust/crates/hs5t-dns-cache/src/: lib.rs
rust/crates/hs5t-jni/: Cargo.toml
rust/crates/hs5t-jni/src/: lib.rs
rust/crates/hs5t-logger/: Cargo.toml
rust/crates/hs5t-logger/src/: lib.rs
rust/crates/hs5t-ring-buffer/: Cargo.toml
rust/crates/hs5t-ring-buffer/proptest-regressions/: lib.txt
rust/crates/hs5t-ring-buffer/src/: lib.rs
rust/crates/hs5t-session/: Cargo.toml
rust/crates/hs5t-session/src/: lib.rs  socks5.rs  tcp.rs  udp.rs
rust/crates/hs5t-tunnel/: Cargo.toml
rust/crates/hs5t-tunnel/src/: freebsd.rs  lib.rs  linux.rs  macos.rs  netbsd.rs  windows.rs
rust/tests/differential/: Cargo.toml  build.rs
rust/tests/differential/src/: dns_diff.rs  dns_fuzz.rs  dns_shim.c  dns_shim_ffi.rs  dns_shim_smoke.rs  lib.rs  ring_buffer_wrapper.c
tests/c/: Makefile  test_exec  test_list  test_logger  test_ring_buffer
tests/c/unit/: test_exec.c  test_list.c  test_logger.c  test_ring_buffer.c
tests/integration/: spec.md
