[workspace]
resolver = "2"
members = [
    "crates/hs5t-config",
    "crates/hs5t-logger",
    "crates/hs5t-ring-buffer",
    "crates/hs5t-dns-cache",
    "crates/hs5t-tunnel",
    "crates/hs5t-session",
    "crates/hs5t-core",
    "crates/hs5t-jni",
    "crates/hs5t-bin",
    "tests/differential",
]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Networking / TUN
nix = { version = "0.29", features = ["net", "ioctl", "fs"] }

# TCP stack (replaces lwip)
smoltcp = { version = "0.12", features = ["async", "proto-ipv4", "proto-ipv6", "socket-tcp", "socket-udp"] }

# SOCKS5 client (replaces hev-socks5-core)
fast-socks5 = "0.9"

# LRU cache for DNS
lru = "0.12"

# JNI (Android)
jni = "0.21"

# Property-based testing
proptest = "1"

# Build utilities
cc = "1"
