[package]
name = "hs5t-bin"
version = "0.1.0"
edition = "2021"
description = "CLI binary for hev-socks5-tunnel"

[[bin]]
name = "hs5t"
path = "src/main.rs"

[dependencies]
hs5t-core = { path = "../hs5t-core" }
hs5t-config = { path = "../hs5t-config" }
hs5t-tunnel = { path = "../hs5t-tunnel" }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
libc = { workspace = true }
signal-hook = "0.3"

[dev-dependencies]
