[package]
name = "hs5t-core"
version = "0.1.0"
edition = "2021"
description = "Core tunnel event loop (smoltcp + tokio)"

[features]
c-api = []

[dependencies]
hs5t-config = { path = "../hs5t-config" }
hs5t-logger = { path = "../hs5t-logger" }
hs5t-tunnel = { path = "../hs5t-tunnel" }
hs5t-dns-cache = { path = "../hs5t-dns-cache" }
hs5t-session = { path = "../hs5t-session" }
smoltcp = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
libc = { workspace = true }
once_cell = "1"

[build-dependencies]
cbindgen = "0.27"
