[package]
name = "hs5t-jni"
version = "0.1.0"
edition = "2021"
description = "Android JNI shim for hev-socks5-tunnel"

[lib]
crate-type = ["cdylib"]

[features]
android = ["jni"]

[dependencies]
hs5t-core = { path = "../hs5t-core" }
jni = { version = "0.21", optional = true }
tokio = { workspace = true }
tracing = { workspace = true }
once_cell = "1"
