[package]
name = "hs5t-jni"
version = "0.1.0"
edition = "2021"
description = "Android JNI shim for hev-socks5-tunnel"

[lib]
crate-type = ["cdylib"]

[dependencies]
hs5t-core = { path = "../hs5t-core" }
hs5t-config = { path = "../hs5t-config" }
jni = { version = "0.21" }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
once_cell = "1"
