[package]
name = "differential-tests"
version = "0.1.0"
edition = "2021"
description = "Differential tests: C vs Rust implementation comparison"

[build-dependencies]
cc = "1"

[dependencies]
hs5t-ring-buffer = { path = "../../crates/hs5t-ring-buffer" }
hs5t-config = { path = "../../crates/hs5t-config" }
hs5t-dns-cache = { path = "../../crates/hs5t-dns-cache" }
proptest = "1"
